# sdlprof

./: CMakeLists.txt  README.md  main.cpp  posix_file_system.hpp  profiler.cpp
include/: config.hpp  posix_file_system.hpp  posix_passthrough.hpp
include/log_formats/: json_log.hpp  pretty_print_log.hpp
src/: posix_file_system.cpp  posix_passthrough.cpp  posix_passthrough_alt.cpp
test/: main.cpp
